[package]
name = "machine-id"
version = "0.1.1"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD"
description = """
Library to get a UUID specific to the machine.
"""
repository = "https://github.com/mathstuf/rust-machine-id"
homepage = "https://github.com/mathstuf/rust-machine-id"
readme = "README.md"

[dependencies]
lazy_static = "~0.1.14"
log = "~0.3.2"
uuid = "~0.1.18"
# https://github.com/retep998/winapi-rs/issues/214
#winapi = "~0.2.4"
#advapi32-sys = "~0.1.2"
