[package]
name = "machine-id"
version = "0.3.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
license = "BSD-3-Clause"
description = """
Library to get a UUID specific to the machine.
"""
repository = "https://github.com/mathstuf/rust-machine-id"
documentation = "https://docs.rs/machine-id/~0.3"
keywords = ["uuid"]

[dependencies]
error-chain = "~0.10"
lazy_static = "~0.2"
log = "~0.3"

uuid = { version = "~0.5", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
advapi32-sys = "~0.2"
rust_win32error = "~0.8"
winapi = "~0.2"
